crates/hpc-core/tests/compile_fail/api_cross_context.stderr
warning: unreachable expression
  --> tests/compile_fail/api_cross_context.rs:18:58
   |
18 |     let (_inflight, _evt) = buf1.enqueue_kernel(&queue2, &unimplemented!(), 16).unwrap();
   |                                                          ^----------------
   |                                                          ||
   |                                                          |any code following this expression is unreachable
   |                                                          unreachable expression
   |
   = note: `#[warn(unreachable_code)]` on by default

error[E0308]: mismatched types
  --> tests/compile_fail/api_cross_context.rs:18:58
   |
18 |     let (_inflight, _evt) = buf1.enqueue_kernel(&queue2, &unimplemented!(), 16).unwrap();
   |                                  --------------          ^^^^^^^^^^^^^^^^^ expected `&Kernel<'_>`, found `&!`
   |                                  |
   |                                  arguments to this method are incorrect
   |
   = note: expected reference `&Kernel<'_>`
              found reference `&!`
note: method defined here
  --> src/api/device_buffer/ready/mod.rs
   |
   |     pub fn enqueue_kernel(
   |            ^^^^^^^^^^^^^^
